--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
+    "build:github": "npm run build"
   },
   "dependencies": {
     "@fluentui/react-components": "^9.54.0",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
+    "@types/node": "^24.10.0",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
