--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
       run: pnpm install --no-frozen-lockfile
       
     - name: Build
-      run: pnpm run build
+      run: GITHUB_PAGES=true pnpm run build
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
